--- a/gradle.properties
+++ b/gradle.properties
@@ -1,16 +1,17 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
+org.gradle.java.home=C:/Program Files/jdk-17.0.1
 
 # Fabric Properties
 	# check these on https://fabricmc.net/versions.html
 	minecraft_version=1.18
 	yarn_mappings=1.18+build.1
-	loader_version=0.12.6
+	loader_version=0.12.8
 
 # Mod Properties
-	mod_version = 1.0.0
-	maven_group = com.example
-	archives_base_name = fabric-example-mod
+	mod_version = 1.18-1.0.0
+	maven_group = com.omashe.fastdecay
+	archives_base_name = fast-decay
 
 # Dependencies
-	fabric_version=0.43.1+1.18
+	fabric_version=0.44.0+1.18
