--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
-org.gradle.java.home=C:/Program Files/jdk-17.0.1
+org.gradle.java.home=C:\Program Files\jdk-17.0.1
 
 # Fabric Properties
 	# check these on https://fabricmc.net/versions.html
@@ -10,8 +10,8 @@ org.gradle.java.home=C:/Program Files/jdk-17.0.1
 
 # Mod Properties
 	mod_version = 1.18-1.0.0
-	maven_group = com.omashe.fastdecay
-	archives_base_name = fast-decay
+	maven_group = net.omashe.fastdecay
+	archives_base_name = fastdecay
 
 # Dependencies
 	fabric_version=0.44.0+1.18
