--- a/settings.gradle
+++ b/settings.gradle
@@ -1,8 +1,8 @@
 pluginManagement {
     repositories {
         maven {
-            name = 'Fabric'
-            url = 'https://maven.fabricmc.net/'
+            name = 'OMASHE'
+            url = 'https://maven.omashe.net/'
         }
         mavenCentral()
         gradlePluginPortal()
