--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
-org.gradle.java.home=C:\Program Files\jdk-17.0.1
+# org.gradle.java.home=C:\Program Files\jdk-17.0.1
 
 # Fabric Properties
 	# check these on https://fabricmc.net/versions.html
